K8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres-db

  template:
    metadata:
      labels:
        app: postgres-db

    spec:
      containers:
        - name: postgres-db
          image: postgres:13

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
