K8s/backend-service.yml
apiVersion: v1 
kind: Service 

metadata:
  name: fintrust-backend
  labels:
    app: fintrust-backend

spec:
  selector:
    app: fintrust-backend
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082

  type: ClusterIP
